# check-file-and-directory-names

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  file_and_directory_name_checker.py  pyproject.toml
check_file_and_directory_names/: core.py  main.py
tests/: test_core.py  test_main.py
