[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "check_file_and_directory_names"
version = "0.0.1"
authors = [
    { name = "Alex Gregory" }
]
description = "A pre-commit hook for checking file and directory names"
dependencies = [
    "pre-commit"
]

[project.optional-dependencies]
test = [
    "pytest"
]
